# sketches

./: .gitignore  Makefile  README.md  environment.yml  requirements.txt  setup.cfg
configs/: params.yml
notebooks/: main.ipynb  vis.ipynb
src/: create_labels.py  download_data.py  evaluate.py  train.py
src/model/: data_loader.py  net.py
src/models/: data_loader.py
src/utils/: dist_utils.py  download_utils.py  utils.py
